# LibGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Windows.md
cmake/: JSON-LibGame.cmake  JSON.cmake  LGOpenCV.cmake  Leptonica.cmake  LibGameConfig.cmake.in  LibGraphics-LibGame.cmake  LibGraphics.cmake  LibIO-LibGame.cmake  LibIO.cmake  LibOS-LibGame.cmake  LibOS.cmake  LibScreenshots-LibGame.cmake  LibScreenshots.cmake  OpenCV-LibGame.cmake  OpenCV.cmake  Screenshots.cmake  Tesseract.cmake
include/LibGame/: BaseInteraction.hpp  InteractionBase.hpp  Interactions.hpp  LibGame.hpp  Mouse.hpp
include/LibGame/action/primary/: ActionStatus.hpp  DanceStatus.hpp  IdlePrimaryStatus.hpp  SlowDanceStatus.hpp
include/LibGame/action/secondary/: MovementSpeedSecondaryStatus.hpp  NakedSecondaryStatus.hpp  PartnerSecondaryStatus.hpp  StraponSecondaryStatus.hpp
include/LibGame/asset/: AssetCache.hpp  Assets.hpp
include/LibGame/detect/: DArgs.hpp  DResult.hpp  Detector.hpp
include/LibGame/exceptions/: AssetException.hpp
include/LibGame/io/: Clipboard.hpp  Keyboard.hpp  Mouse.hpp  Screenshot.hpp
include/LibGame/io/keyboard/: Keyboard.cpp  Keyboard.hpp
include/LibGame/io/mouse/: Mouse.cpp  Mouse.hpp
include/LibGame/misc/: KvStore.hpp  Point.h  Point.hpp  Rect.hpp
include/LibGame/module/: Actions.hpp  BaseModule.hpp  Camera.hpp  Chat.hpp  Clipboard.hpp  Clothing.hpp  Context.hpp  Dances.hpp  Friends.hpp  Gift.hpp  Idle.hpp  ImageReader.hpp  Interface.hpp  Item.hpp  Moderation.hpp  Movement.hpp  Profile.hpp  SexActions.hpp  Slowdance.hpp  Strapon.hpp
include/LibGame/state/: BaseState.hpp  JsonFile.hpp
include/LibGame/status/primary/: ActionStatus.hpp  DanceStatus.hpp  IdlePrimaryStatus.hpp  SlowDanceStatus.hpp
include/LibGame/status/secondary/: MovementSpeedSecondaryStatus.hpp  NakedSecondaryStatus.hpp  PartnerSecondaryStatus.hpp  StraponSecondaryStatus.hpp
include/LibGame/statuses/primary/: ActionStatus.hpp  DanceStatus.hpp  IdlePrimaryStatus.hpp  PrimaryStatus.hpp  SlowDanceStatus.hpp
include/LibGame/statuses/secondary/: MovementSpeedSecondaryStatus.hpp  NakedSecondaryStatus.hpp  PartnerSecondaryStatus.hpp  SecondaryStatus.hpp  StraponSecondaryStatus.hpp
src/: Interactions.cpp  main.cpp
src/action/primary/: ActionStatus.cpp  DanceStatus.cpp  IdlePrimaryStatus.cpp  SlowDanceStatus.cpp
src/action/secondary/: MovementSpeedSecondaryStatus.cpp  NakedSecondaryStatus.cpp  PartnerSecondaryStatus.cpp  StraponSecondaryStatus.cpp
src/asset/: AssetCache.cpp  Assets.cpp
src/detect/: Detector.cpp
src/io/: Clipboard.cpp  Keyboard.cpp  Mouse.cpp  Screenshot.cpp
src/modules/: Actions.cpp  Camera.cpp  Chat.cpp  Clipboard.cpp  Clothing.cpp  Context.cpp  Dances.cpp  Friends.cpp  Gift.cpp  Idle.cpp  ImageReader.cpp  Interface.cpp  Item.cpp  Moderation.cpp  Movement.cpp  Profile.cpp  SexActions.cpp  Slowdance.cpp  Strapon.cpp
src/state/: JsonFile.cpp
src/status/primary/: ActionStatus.cpp  DanceStatus.cpp  IdlePrimaryStatus.cpp  SlowDanceStatus.cpp
src/status/secondary/: MovementSpeedSecondaryStatus.cpp  NakedSecondaryStatus.cpp  PartnerSecondaryStatus.cpp  StraponSecondaryStatus.cpp
src/statuses/primary/: ActionStatus.cpp  DanceStatus.cpp  IdlePrimaryStatus.cpp  SlowDanceStatus.cpp
src/statuses/secondary/: MovementSpeedSecondaryStatus.cpp  NakedSecondaryStatus.cpp  PartnerSecondaryStatus.cpp  StraponSecondaryStatus.cpp
